kube/bchd-web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    service: bchd-web
  name: bchd-web
spec:
  replicas: 3
  selector:
    matchLabels:
      service: bchd-web
  template:
    metadata:
      labels:
        service: bchd-web
    spec:
      containers:
      - image: zquestz/bchd-web:12-08-2020
        imagePullPolicy: Always
        name: bchd-web
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "8Mi"
      restartPolicy: Always
