kube/bchd-web-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: bchd-web
  namespace: default
spec:
  ports:
    - port: 95
      targetPort: 80
  selector:
    service: bchd-web
  type: NodePort
